@startuml
'https://plantuml.com/sequence-diagram

class Item
{
    String description
    String date
    String completion
    public Item(String description, String date, String completion)
    public String getDescription()
    public void setDescription(String description)
    public String getDate()
    public void setDate(String date)
    public String getCompletion()
    public void setComplete(String completion)
}

class ToDoController
{
    private TableView<Item> table;
    private TableColumn<Item,String> description;
    private TableColumn<Item, String> date;
    private TableColumn<Item,String> completion;
    private TextField descriptionField;
    private DatePicker dateField;
    private CheckBox completionField;
    private Button addItem;
    private Button removeItem;
    private Button clearItem;
    private Button updateItem;
    private Button showIncomplete;
    private Button showComplete;
    private Button showAll;
    private MenuItem saveButton;
    private MenuItem loadButton;
    ObservableList<Item> list
    protected void initialize()
    public void addItemClick(ActionEvent actionEvent)
    public void addItem(Item item)
    public void removeItemClick(ActionEvent actionEvent)
    public void removeItem(Item item)
    public void clearItemClick(ActionEvent actionEvent)
    public void clearItem()
    public void updateItemClick(ActionEvent actionEvent)
    public void updateItem(Item item, String desc, String date, String comp)
    public void showIncompleteClick(ActionEvent actionEvent)
    public ObservableList<Item> showIncomplete()
    public void showCompleteClick(ActionEvent actionEvent)
    public ObservableList<Item> showComplete()
    public void showAllClick(ActionEvent actionEvent)
    public void showAll()
    public void saveButtonClick(ActionEvent actionEvent)
    public void saveList(File file)
    public void loadButtonClick(ActionEvent actionEvent)
    public void loadList(File file) throws IOException
    public void displaySelected(MouseEvent event)
}

class ToDoApp
{
    start(Stage stage)
    main()
}


ToDoApp -- ToDoController : > Uses
ToDoController -- Item : > Makes and Uses

@enduml